# zoomies

./: Cargo.toml  README.md
src/client/: main.rs
src/server/: config.rs  config.yml  main.rs
