[package]
name = "zoomies"
version = "0.1.0"
authors = ["Unaidedsteak <ryan@assis.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zoomies-client"
path = "src/client/main.rs"

[[bin]]
name = "zoomies-server"
path = "src/server/main.rs"

[dependencies]
rocket = "0.4.6"
clap = "2.33.3"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
